tests/baselines/reference/incrementOnTypeParameter.errors.txt
tests/cases/compiler/incrementOnTypeParameter.ts(4,9): error TS2356: An arithmetic operand must be of type 'any', 'number', 'bigint' or an enum type.
tests/cases/compiler/incrementOnTypeParameter.ts(5,39): error TS2356: An arithmetic operand must be of type 'any', 'number', 'bigint' or an enum type.


==== tests/cases/compiler/incrementOnTypeParameter.ts (2 errors) ====
    class C<T> {
        a: T;
        foo() {
            this.a++; 
            ~~~~~~
!!! error TS2356: An arithmetic operand must be of type 'any', 'number', 'bigint' or an enum type.
            for (var i: T, j = 0; j < 10; i++) { 
                                          ~
!!! error TS2356: An arithmetic operand must be of type 'any', 'number', 'bigint' or an enum type.
            }
        }
    }
    